--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
-<img src="img/js-logo.png" alt="Logo JavaScript">
-<h1>Structure de base pour application Web</h1>
+<h1>Convertisseur Celcius > Fahrenheit</h1>
+<p>Saisir une température en °C</p>
+<label></label>
 
 <!-- JavaScript -->
 <script src="js/main.js"></script>
